--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,12 @@
 upstream django {
-    server django_gunicorn:8080;
+    server django_gunicorn:8000;
 }
 
 server {
     listen 80;
     
     location / {
-        proxy_pass http://django_gunicorn;
+        proxy_pass http://django;
     }
     
     location /static/ {
